file-processor-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-processor
  namespace: cloud-native-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-processor
  template:
    metadata:
      labels:
        app: file-processor
    spec:
      containers:
      - name: file-processor
        image: ghcr.io/dawidbera/billing-pipeline/file-processor:49fe488e8b16bdeeb5acaadf9ef82969a8b8e15b
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
